--- a/master_petugas/templates/master_petugas/petugas.html
+++ b/master_petugas/templates/master_petugas/petugas.html
@@ -124,21 +124,15 @@
                         <table class="table table-centered table-hover mb-0" id="ranking-global">
                             <thead>
                                 <tr>
-                                    <th>Wilayah</th>
+                                    <th>Wilayah (Kecamatan)</th>
                                     <th>Nama Mitra</th>
                                     <th class="text-center">Rerata Nilai</th>
                                     <th>Ranking</th>
                                 </tr>
                             </thead>
+                       
                             <tbody>
-                                {% for i in '1234567891'  %}
-                                    <tr>
-                                        <td>Katobu</td>
-                                        <td>Rifki Gustiawan</td>
-                                        <td class="text-center">4.9</td>
-                                        <td>5 / 259</td>
-                                    </tr>
-                                {% endfor %}
+
                             </tbody>
                         </table>
                     </div> <!-- end table-responsive-->
@@ -159,7 +153,7 @@
                     <h4 class="header-title mt-2 mb-3">Daftar Mitra BPS Kabupaten Muna</h4>
 
                     <div class="table-responsive">
-                        <table class="table table-centered table-nowrap table-hover mb-0">
+                        <table class="table table-centered table-nowrap table-hover mb-0" id="list-petugas">
                             <thead>
                                 <tr>
                                     <th>ID Sobat</th>
@@ -209,3 +203,81 @@
 </div>
 <!-- container -->
 {% endblock content %}
+{% block js-extender %}
+    <script>
+        let table = $('#ranking-global').DataTable({
+            processing: true,
+            serverSide: true,
+            ajax: {
+                "url": "{% url 'master_penilaian:rank-petugas-json' %}",
+                "headers": {
+                    "X-Requested-With": "XMLHttpRequest",
+                    "X-CSRFToken": '{{csrf_token}}',
+                },
+                "type": "POST"
+            },
+            columns :[
+                {"data": 'wilayah'},
+                {"data" : 'petugas'},
+                {"data" : 'rerata'},
+                {"data" : 'rank'},
+            ],
+            columnDefs: [ {
+                'targets': [2,3], /* column index */
+                'className': "text-center"
+            }],
+            bLengthChange: false,
+            bPaginate: false,
+            bInfo : false,
+            bFilter: false,
+        });
+
+        let table2 = $("#list-petugas").DataTable({
+            processing: true,
+            serverSide: true,
+            ajax: {
+                "url": "{% url 'master_petugas:list-petugas-json' %}",
+                "headers": {
+                    "X-Requested-With": "XMLHttpRequest",
+                    "X-CSRFToken": '{{csrf_token}}',
+                },
+                "type": "POST"
+            },
+            columns :[
+                {"data": 'kode_petugas'},
+                {"data": 'nama_petugas'},
+                {"data" : 'adm_id__region'},
+                {"data": 'no_telp'},
+                {"data" : 'email'},
+                {"data" : 'jml_kegiatan'},
+                {"data" : 'jml_penilai'},
+                {"data" : 'status'},
+                {"data" : 'aksi'},
+            ],
+            lengthMenu: [5, 25, 50, 100,'All'],
+            columnDefs: [ {
+                'targets': [8], /* column index */
+                'orderable': false, /* true or false */
+                'className': "text-center"
+            },
+            {
+                'targets': [3, 5,6,7], /* column index */
+                'className': "text-center"
+            }
+            ],
+            bLengthChange: false,
+            bInfo : false,
+            bFilter: false,
+            keys: !0,
+            language: {
+                paginate: {
+                previous: "<i class='mdi mdi-chevron-left'>",
+                next: "<i class='mdi mdi-chevron-right'>",
+                },
+            },
+            drawCallback: function () {
+                $(".dataTables_paginate > .pagination").addClass("pagination-rounded");
+            },
+        });
+    </script>
+{% endblock js-extender %}
