--- a/templates/base/detached-layout/base.html
+++ b/templates/base/detached-layout/base.html
@@ -215,7 +215,13 @@
                         <li class="side-nav-item">
                             <a href="{% url 'master_survei:index' %}" class="side-nav-link">
                                 <i class="mdi mdi-clipboard-account"></i>
-                                <span> Master Survey </span>
+                                <span> Master Survei </span>
+                            </a>
+                        </li>
+                        <li class="side-nav-item">
+                            <a href="{% url 'master_survei:kegiatan-survey' %}" class="side-nav-link">
+                                <i class="mdi mdi-clipboard-account"></i>
+                                <span> Kegiatan Survei </span>
                             </a>
                         </li>
                         <li class="side-nav-item">
