--- a/master_penilaian/templates/master_penilaian/entry_nilai.html
+++ b/master_penilaian/templates/master_penilaian/entry_nilai.html
@@ -54,7 +54,7 @@
                                 <i class="mdi mdi-account-multiple widget-icon"></i>
                             </div>
                             <h5 class="text-muted fw-normal mt-0" title="Jumlah Kegiatan">Jumlah Kegiatan Diikuti</h5>
-                            <h3 class="mt-3 mb-3">5</h3>
+                            <h3 class="mt-3 mb-3">{{jml_kegiatan}}</h3>
                         </div> <!-- end card-body-->
                     </div> <!-- end card-->
                 </div> <!-- end col-->
@@ -66,7 +66,7 @@
                                 <i class="mdi mdi-cart-plus widget-icon"></i>
                             </div>
                             <h5 class="text-muted fw-normal mt-0" title="Number of Orders">Jumlah Kegiatan Penilaian</h5>
-                            <h3 class="mt-3 mb-3">10</h3>
+                            <h3 class="mt-3 mb-3">{{jml_penilaian_aktif}}</h3>
                         </div> <!-- end card-body-->
                     </div> <!-- end card-->
                 </div> <!-- end col-->
@@ -80,7 +80,7 @@
                                 <i class="mdi mdi-currency-usd widget-icon"></i>
                             </div>
                             <h5 class="text-muted fw-normal mt-0" title="Average Revenue">Jumlah Mitra</h5>
-                            <h3 class="mt-3 mb-3">20</h3>
+                            <h3 class="mt-3 mb-3">{{jml_mitra_belum_dinilai}}</h3>
                         </div> <!-- end card-body-->
                     </div> <!-- end card-->
                 </div> <!-- end col-->
@@ -92,7 +92,7 @@
                                 <i class="mdi mdi-pulse widget-icon"></i>
                             </div>
                             <h5 class="text-muted fw-normal mt-0" title="Growth">Jumlah Mitra Dinilai</h5>
-                            <h3 class="mt-3 mb-3">24</h3>
+                            <h3 class="mt-3 mb-3">{{jml_mitra_dinilai}}</h3>
                         </div> <!-- end card-body-->
                     </div> <!-- end card-->
                 </div> <!-- end col-->
